tests/NormalTests/paczka1/fuzzy1/40546235.err
Error in line 2: jNpMUfA A795 88,3
Error in line 5: jNpMUfA A701 26,1
Error in line 8: jNpMUfA S393 5,3
Error in line 15: jNpMUfA A514 76,4
Error in line 17: jNpMUfA A795 6,0
Error in line 19: 3zb2YVIBi S393 69,2
Error in line 35: 3zb2YVIBi S393 26,8
